--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
     background-color: #003249;
     color: whitesmoke;
 }
+
+.card-text {
+    color: gray;
+}
+
+.card-title {
+    color: gray;
+}
